--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Seu Nome - Portfólio</title>
-        <link rel="stylesheet" href="style.css" />
+        <link rel="stylesheet" href="src/css/style.css" />
     </head>
     <body>
         <!-- Particles Background -->
@@ -146,6 +146,6 @@
             <p>&copy; 2025 Inacio. Todos os direitos reservados.</p>
         </footer>
 
-        <script src="script.js"></script>
+        <script src="src/js/script.js"></script>
     </body>
 </html>
