--- a/index.html
+++ b/index.html
@@ -82,8 +82,16 @@
                             fundo personalizadas com gradientes e padrões.
                         </p>
                         <div class="project-links">
-                            <a href="#" class="project-link">Demo</a>
-                            <a href="#" class="project-link">Código</a>
+                            <a
+                                href="https://inaciops.github.io/background-magico/"
+                                class="project-link"
+                                >Demo</a
+                            >
+                            <a
+                                href="https://github.com/InacioPS/background-magico"
+                                class="project-link"
+                                >Código</a
+                            >
                         </div>
                     </div>
                 </div>
