--- a/index.html
+++ b/index.html
@@ -82,16 +82,8 @@
                             fundo personalizadas com gradientes e padrões.
                         </p>
                         <div class="project-links">
-                            <a
-                                href="https://inaciops.github.io/background-magico/"
-                                class="project-link"
-                                >Demo</a
-                            >
-                            <a
-                                href="https://github.com/InacioPS/background-magico"
-                                class="project-link"
-                                >Código</a
-                            >
+                            <a href="https://inaciops.github.io/background-magico/" target="_blank" class="project-link">Demo</a>
+                            <a href="https://github.com/InacioPS/background-magico" target="_blank" class="project-link">Código</a>
                         </div>
                     </div>
                 </div>
